--- a/app/views/tournaments/tournament_info.html
+++ b/app/views/tournaments/tournament_info.html
@@ -2,9 +2,12 @@
 {% block content %}
 
 <h1>{{tournament.name}}</h1>
-<div class="alert alert-success">
+{% if message is not null %}
+<div class="alert alert-success fade in">
+    <a href='#' class='close' data-dismiss='alert' aria-label='close'>&times;</a>
     {{message}}
 </div>
+{% endif %}
 
 <p>
     <button class="btn btn-danger">Delete</button> <a href="{{base_path}}/tournaments/{{tournament.id}}/edit" class="btn btn-default">Edit</a>
@@ -37,9 +40,10 @@
         {% for i in range(1, 8) %}
         <tr>
             <td>{{ i }}</td>
-            <td><a href="#">{{tournament.standings}}</a></td>
-            <td>{{tournament.standings [0]}}</td>
-            <td>{{tournament.standings[1]}}</td>
+            <td><a href="#"></a></td>
+            <td></td>
+            <td></td>
+            <td><a class="btn-default btn-sm" href="#">Edit</a></td>
         </tr>
         {% endfor %}
     </tbody>
