--- a/app/views/login/login.html
+++ b/app/views/login/login.html
@@ -2,18 +2,18 @@
 {% block content %}
 <h1>Login</h1>
 
-<!-- Kaikki lomakkeen elementit form-tagin sisään -->
-<form>
-    <!-- Tekstikenttä käyttäjätunnukselle -->
+
+<form method="post" action="{{base_path}}/login">
+
     <div class="form-group">
         <label>Username</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" name="username" value="{{username}}">
     </div>
 
-    <!-- Salasanakenttä salasanalle -->
+
     <div class="form-group">
         <label>Password</label>
-        <input type="password" class="form-control">
+        <input type="password" class="form-control" name="password">
     </div>
 
     <button type="submit" class="btn btn-primary">Login</button>
