--- a/app/views/tournaments/edit.html
+++ b/app/views/tournaments/edit.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Add tournament</h1>
+<h1>Modify Tournament</h1>
 
 {% if errors %}
 <div class="alert alert-danger">
@@ -13,7 +13,7 @@
 </div>
 {% endif %}
 
-<form method="post" action="{{base_path}}/tournaments">
+<form method="post" action="{{base_path}}/tournaments/{{attributes.id}}/edit">
     <div class="form-group">
         <label>Name</label>
         <input type="text" name="name" class="form-control" value="{{attributes.name}}">
