--- a/app/views/base.html
+++ b/app/views/base.html
@@ -35,20 +35,26 @@
                         <span class="icon-bar"></span>
                     </button>
                     <!-- Sovelluksen nimi -->
-                    <a class="navbar-brand" href="#">Capcom Protour</a>
+                    <a class="navbar-brand" href="{{base_path}}">Capcom Protour</a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="navigation">
                     <ul class="nav navbar-nav">
                         <!-- Navigaation linkit -->
-                        <li><a href="#">Front page</a></li>
-                        <li><a href="#">Tournaments</a></li>
-                        <li><a href="#">Players</a></li>
+                        <li><a href="{{base_path}}">Front page</a></li>
+                        <li><a href="{{base_path}}/tournaments">Tournaments</a></li>
+                        <li><a href="{{base_path}}/players">Players</a></li>
                     </ul>
 
+                    {% if user_logged_in %}
+                    <form class="navbar-form navbar-right" method="post" action="{{base_path}}/logout">
+                        <button type="submit" class="btn btn-default">Logout</button>
+                    </form>
+                    {% else %}
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">Login</a></li>
+                        <li><a href="{{base_path}}/login">Login</a></li>
                     </ul>
+                    {% endif %}
                 </div>
             </div>
         </nav>
