--- a/app/views/suunnitelmat/start_page.html
+++ b/app/views/suunnitelmat/start_page.html
@@ -8,11 +8,11 @@
 </div>
 {% endif %}
 
-<h1>Capcom Protour</h1>
+<h1 class="text-center">Capcom Protour</h1>
 
 <p>
-    <a class="btn btn-primary btn-lg" href="#" role="button">Tournaments</a>
-    <a class="btn btn-info btn-lg" href="#" role="button">Players</a>
+    <a class="btn btn-primary btn-lg center-block" href="{{base_path}}/tournaments" role="button">Tournaments</a>
+    <a class="btn btn-info btn-lg center-block" href="{{base_path}}/players" role="button">Players</a>
 </p>
 
 {% endblock %}
