--- a/app/views/tournaments/edit.html
+++ b/app/views/tournaments/edit.html
@@ -20,8 +20,13 @@
     </div>
 
     <div class="form-group">
-        <label>Date</label>
+        <label>Starting date</label>
         <input type="text" name="held" class="form-control" value="{{attributes.held}}">
+    </div>
+    
+    <div class="form-group">
+        <label>Ending date</label>
+        <input type="text" name="ends" class="form-control" value="{{attributes.ends}}">
     </div>
 
     <div class="form-group">
