--- a/app/views/tournaments/index.html
+++ b/app/views/tournaments/index.html
@@ -31,7 +31,7 @@
 
         <tr>
             <td><a href="{{base_path}}/tournaments/{{tournament.id}}">{{tournament.name}}</td>
-            <td>{{tournament.held}}</td>
+            <td>{{tournament.held}} - {{tournament.ends}}</td>
             <td>{{tournament.location}}</td>
             <td>{{tournament.status}}</td>
             <td>{{tournament.region}}</td>
