--- a/app/views/players/edit.html
+++ b/app/views/players/edit.html
@@ -13,7 +13,7 @@
 </div>
 {% endif %}
 
-<form method="post" action="{{base_path}}/tournaments/{{attributes.id}}/edit">
+<form method="post" action="{{base_path}}/players/{{attributes.id}}/edit">
     <div class="form-group">
         <label>Handle</label>
         <input type="text" name="handle" class="form-control" value="{{attributes.handle}}">
@@ -23,12 +23,16 @@
         <input type="text" name="name" class="form-control" value="{{attributes.name}}">
     </div>
     <div class="form-group">
+        <label>sponsor</label>
+        <input type="text" name="sponsor" class="form-control" value="{{attributes.sponsor}}">
+    </div>
+    <div class="form-group">
         <label>Country</label>
         <input type="text" name="country" class="form-control" value="{{attributes.country}}">
     </div>
     <div class="form-group">
-        <label for="characters">Characters</label>
-        <select class="selectpicker" name="characters[]" multiple>
+        <label for="characters">Main character</label>
+        <select class="form-control" name="characters">
             <option>Ryu</option>
             <option>Chun-li</option>
             <option>Nash</option>
@@ -51,15 +55,15 @@
         </select>
     </div>
 
-    <div class="form-group">
-        <label for="tournaments">Tournaments</label>
-        <select class="selectpicker" name="tournaments[]" multiple>
-            <option>Europe</option>
-            <option>North America</option>
-            <option>South America</option>
-            <option>Asia</option>
-        </select>
-    </div>
+    <!--    <div class="form-group">
+            <label for="tournaments">Tournaments</label>
+            <select class="selectpicker" name="tournaments[]" multiple>
+                <option>Europe</option>
+                <option>North America</option>
+                <option>South America</option>
+                <option>Asia</option>
+            </select>
+        </div>-->
 
     <div class="form-group">
         <label>Points in total:</label>
